# mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-MIT  README.md  biome.json  loader.py  main.py  manifest.json  package.json  pnpm-lock.yaml  pyproject.toml  tools.py  tsconfig.json  update-docs.ts  update_docs.py
.changeset/: access-token-env-injection.md  bumpy-monkeys-like.md  config.json  fancy-teams-shout.md  fiery-drinks-wear.md  flat-cameras-fold.md  funny-results-win.md  icy-cases-feel.md  kind-files-argue.md  new-tools-divide.md  perky-ties-hide.md  portone-env-switch.md  pre.json  recon-date-range.md  recon-error-message.md  reconciliation-tools.md  remove-dev-endpoint-urls.md  six-hairs-do.md  sync-manifest-version.js  tidy-jeans-laugh.md  update-docs-20260326053317.md
.github/workflows/: cd.yml  ci.yml  update-docs.yml
assets/: instructions.md
assets/docs/: v1-docs-full.md  v2-docs-full.md  website-links.md
docs/: API.md  v1-docs-full.md  v2-docs-full.md
scripts/: build-dxt.ts
src/: index.ts  types.ts  url.ts
src/loader/: documents.ts  index.ts  markdown.ts  schema.ts
src/portone_mcp_server/: loader.py  server.py  tools.py
src/tools/: addTestChannel.ts  getChannelsOfStore.ts  getDocsUrl.ts  getIdentityVerification.ts  getIdentityVerificationsByFilter.ts  getPayment.ts  getPaymentsByFilter.ts  getReconciliationsByFilter.ts  getSettlementStatistics.ts  getSettlementSummaries.ts  index.ts  listDocs.ts  listSharedTestChannels.ts  listStores.ts  readDoc.ts  (+6 more)
tests/: reconciliation.test.ts  staticToken.test.ts  test_loader.py  url.test.ts
(+414 files in other folders)
