[project]
name = "portone-mcp-server"
version = "0.1.0"
description = "PortOne 개발자 문서를 위한 MCP(Model Context Protocol) 서버입니다. 이 서버는 PortOne 문서 내용을 LLM(Large Language Model)에 제공하여 개발자가 PortOne 서비스 관련 정보를 쉽게 검색할 수 있도록 합니다."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.7",
    "mcp[cli]>=1.4.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "ruff>=0.11.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
